traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:13: error: value ==- is not a member of Int
      else if (etat==-1){k-=1;} 
                   ^