traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {
  
  var compteur = 0
  var k =0
  var etat=1
    
  for (i<- 0 to 6){
    for (j<- 0 to 6){
      
      setPos(i, k);
      writeMessage(compteur);
      compteur+=1;
      if(etat==1){k+=1;}
      else if (etat==-1){k-=1;} 
    } 
    etat=etat*(-1)
  }    
}